tests/homarr/test.generated.template.homarr.yaml
---
# Source: homarr/templates/homarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  labels:
    helm.sh/chart: homarr-8.26.0
    app.kubernetes.io/name: homarr
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/version: "v1.74.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ports:
    - name: app
      port: 7575
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: homarr
    app.kubernetes.io/instance: homarr
---
# Source: homarr/templates/homarr-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  labels:
    helm.sh/chart: homarr-8.26.0
    app.kubernetes.io/name: homarr
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/version: "v1.74.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: homarr
      app.kubernetes.io/instance: homarr
  template:
    metadata:
      labels:
        helm.sh/chart: homarr-8.26.0
        app.kubernetes.io/name: homarr
        app.kubernetes.io/instance: homarr
        app.kubernetes.io/version: "v1.74.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      securityContext:
        {}

      containers:
        - name: homarr
          securityContext:
            {}
          image: "ghcr.io/homarr-labs/homarr:v2.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7575
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health/live
              port: 7575
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health/ready
              port: 7575
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
          resources:
            {}
          volumeMounts:
            - name: homarr-database
              mountPath: /appdata

      volumes:
        - name: homarr-database
          persistentVolumeClaim:
            claimName: homarr-database
      nodeSelector:
        kubernetes.io/hostname: beelink-master
---
# Source: homarr/templates/homarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
  labels:
    helm.sh/chart: homarr-8.26.0
    app.kubernetes.io/name: homarr
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/version: "v1.74.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: traefik
  rules:
    - host: "homarr.nicklab.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr
                port:
                  number: 7575
